--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,6 +5,6 @@
          version="4.0">
     <servlet>
         <servlet-name>Sort</servlet-name>
-        <servlet-class>Server.Sort</servlet-class>
+        <servlet-class>Server.ServletSort</servlet-class>
     </servlet>
 </web-app>
