--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -7,4 +7,11 @@
         <servlet-name>Sort</servlet-name>
         <servlet-class>Server.Sort</servlet-class>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>Sort</servlet-name>
+        <url-pattern>sort</url-pattern>
+    </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
