--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <servlet>
-        <servlet-name>Sort</servlet-name>
+        <servlet-name>Sort_1</servlet-name>
         <servlet-class>Server.mainServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Sort</servlet-name>
+        <servlet-name>Sort_1</servlet-name>
         <url-pattern>sort</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
