--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
     <servlet>
         <servlet-name>Generate</servlet-name>
-        <servlet-class>Server.Generate</servlet-class>
+        <servlet-class>Server.Generate_servlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>Sort</servlet-name>
